--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 6000\n",
+    "numTrajs = 12000\n",
     "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
     "with open(filename1) as file:\n",
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
-    "calculateRates = False\n",
+    "calculateRates = True\n",
     "numBootsrapSamples = 2000\n",
     "mfpt, fptstd = analysisTools.bootstrapping(fpts, numBootsrapSamples)\n",
     "print(\"Raw MFPTs: \", np.array(fpts).mean())\n",
@@ -118,25 +118,16 @@
     "print(\"MSMRD bootstrapping mean and std: \", MSMRDmfpt, MSMRDfptstd)\n",
     "print(\"Trajectory lengths\")\n",
     "if calculateRates:\n",
-    "    mkonA = 1.0/mfptA\n",
-    "    mkonB = 1.0/mfptB\n",
-    "    MSMRDmkonA = 1.0/MSMRDmfptA\n",
-    "    MSMRDmkonB = 1.0/MSMRDmfptB\n",
-    "    konAstd = fptAstd/(mfptA*mfptA)\n",
-    "    konBstd = fptBstd/(mfptB*mfptB)\n",
-    "    MSMRDkonAstd = MSMRDfptAstd/(MSMRDmfptA*MSMRDmfptA)\n",
-    "    MSMRDkonBstd = MSMRDfptBstd/(MSMRDmfptB*MSMRDmfptB)\n",
-    "    errorKonA = np.abs(mkonA - MSMRDmkonA)\n",
-    "    relErrorKonA = errorKonA/mkonA\n",
-    "    errorKonB = np.abs(mkonB - MSMRDmkonB)\n",
-    "    relErrorKonB = errorKonB/mkonB\n",
+    "    mkon = 1.0/mfpt\n",
+    "    MSMRDmkon = 1.0/MSMRDmfpt\n",
+    "    konstd = fptstd/(mfpt*mfpt)\n",
+    "    MSMRDkonstd = MSMRDfptstd/(MSMRDmfpt*MSMRDmfpt)\n",
+    "    errorKon = np.abs(mkon - MSMRDmkon)\n",
+    "    relErrorKon = errorKon/mkon\n",
     "    print(\"On rates:\")\n",
-    "    print(\"Bootstrapping mean and std (A):\", mkonA, konAstd)\n",
-    "    print(\"Bootstrapping mean and std (B):\", mkonB, konBstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (A):\", MSMRDmkonA, MSMRDkonAstd)\n",
-    "    print(\"Bootstrapping MSMRD mean and std (B):\", MSMRDmkonB, MSMRDkonBstd)\n",
-    "    print(\"Error and relative error (A):\", errorKonA, relErrorKonA)\n",
-    "    print(\"Error and relative error (B):\", errorKonB, relErrorKonB)"
+    "    print(\"Bootstrapping mean and std:\", mkon, konstd)\n",
+    "    print(\"Bootstrapping MSMRD mean and std:\", MSMRDmkon, MSMRDkonstd)\n",
+    "    print(\"Error and relative error:\", errorKon, relErrorKon)"
    ]
   },
   {
@@ -184,6 +175,13 @@
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -202,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
