--- a/examples/tests/estimateDiffusion.ipynb
+++ b/examples/tests/estimateDiffusion.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Define simulation parameters\n",
-    "dt = 0.01\n",
+    "dt = 0.0001\n",
     "D = 1.0\n",
     "timesteps = 500000\n",
     "x0 = np.array([0.0, 0.0, 0.0])"
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Calculate auto-correlation/mean-square displacement for several lagtimes\n",
-    "lagtimesIndexes = np.arange(50,1000,50)\n",
+    "lagtimesIndexes = np.arange(100,2000,100)\n",
     "lagtimes = np.zeros(len(lagtimesIndexes) + 1)\n",
     "MSD_3D = np.zeros(len(lagtimesIndexes) + 1)\n",
     "for i, lagtimeIndex in enumerate(lagtimesIndexes):\n",
@@ -88,8 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot MSD against lagtime\n",
-    "plt.plot(lagtimes, MSD_3D/6, '-o')"
+    "# Least square approximation with numpy\n",
+    "A = np.vstack([lagtimes, np.ones(len(lagtimes))]).T\n",
+    "slope,b = np.linalg.lstsq(A, MSD_3D/6, rcond=None)[0]\n",
+    "print(slope,b)"
    ]
   },
   {
@@ -98,10 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Least square approximation with numpy\n",
-    "A = np.vstack([lagtimes, np.ones(len(lagtimes))]).T\n",
-    "slope,b = np.linalg.lstsq(A, MSD_3D/6, rcond=None)[0]\n",
-    "print(slope,b)"
+    "# Plot MSD against lagtime\n",
+    "plt.plot(lagtimes, MSD_3D/6, 'o', label = 'position')\n",
+    "plt.plot(lagtimes, slope*lagtimes + b, '-', label = 'position fit')\n",
+    "plt.legend()"
    ]
   },
   {
