--- a/examples/tests/estimateRotationalDiffusion.ipynb
+++ b/examples/tests/estimateRotationalDiffusion.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Calculate auto-correlation/mean-square displacement for several lagtimes\n",
-    "lagtimesIndexes = np.arange(1000,3000,100)\n",
+    "lagtimesIndexes = np.arange(100,2000,100)\n",
     "lagtimes = np.zeros(len(lagtimesIndexes) + 1)\n",
     "MSD_3D = np.zeros(len(lagtimesIndexes) + 1)\n",
     "for i, lagtimeIndex in enumerate(lagtimesIndexes):\n",
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = 20\n",
+    "index = 15\n",
     "DrotApprox = - np.log(1-4*MSD_3D[index]/3.0)/(2*lagtimes[index])\n",
     "DrotApprox"
    ]
@@ -134,8 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DrotApprox = slope\n",
-    "print(DrotApprox)"
+    "plt.plot(lagtimes, - np.log(1-4*MSD_3D/3.0)/2, 'o', label='orientation')\n",
+    "plt.plot(lagtimes, slope*lagtimes + b, '-', label = 'orientation fit')\n",
+    "plt.legend()"
    ]
   },
   {
@@ -143,16 +144,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "DrotApprox = 2*MSD_3D[index]/(3*lagtimes[index])\n",
-    "DrotApprox"
+    "DrotApprox = slope\n",
+    "print(DrotApprox)"
    ]
   },
   {
@@ -163,7 +157,7 @@
    "source": [
     "# Least square approximation with numpy\n",
     "A = np.vstack([lagtimes, np.ones(len(lagtimes))]).T\n",
-    "slope,b = np.linalg.lstsq(A, 2*MSD_3D/3, rcond=None)[0]\n",
+    "slope,b = np.linalg.lstsq(A, 2*MSD_3D/3, rcond=None)[0] # Approximation valid for small lagtimes\n",
     "print(slope,b)"
    ]
   },
