--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -66,7 +66,8 @@
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
-    "        fpts.append(time)\n",
+    "        if time < 400:\n",
+    "            fpts.append(time)\n",
     "\n",
     "# Normalize weights\n",
     "weights = np.ones_like(fpts)/float(len(fpts))"
@@ -91,6 +92,16 @@
     "            \n",
     "# Normalize weights\n",
     "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpts = np.array(fpts)\n",
+    "fpts[fpts > 400]"
    ]
   },
   {
@@ -175,6 +186,13 @@
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
