--- a/examples/scripts_drafts/estimateDiffusionPentamer.ipynb
+++ b/examples/scripts_drafts/estimateDiffusionPentamer.ipynb
@@ -24,7 +24,7 @@
     "# Define particle list with between two and five particles to estimate the diffusion\n",
     "# of dimers/ trimers / cuatrimers? and pentamer\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
-    "numparticles = 1 # It has value between 2 and 5\n",
+    "numparticles = 4 # It has value between 2 and 5\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -113,9 +113,9 @@
    "outputs": [],
    "source": [
     "#Integrate particle list and print only positions \n",
-    "timesteps = 1000000 #1000000 #20000000\n",
+    "timesteps = 100000 #1000000 #1000000 #20000000\n",
     "stride = 10 #25 #250 #1000\n",
-    "datafile  = open('../../data/vmd/pentamerTest.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/pentamerTest_' + str(numparticles) + 'particles.xyz', 'w')\n",
     "cross = [None]*2\n",
     "# Define reference vectors for plotting reference system\n",
     "refVec4 = np.array([0., 0., 3.])\n",
@@ -177,8 +177,9 @@
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_pentamerTest(numparticles = numparticles, \n",
-    "                                    outfname = 'pentamerTest', \n",
-    "                                    tclfname = '../../data/vmd/pentamerTest_2vmd.tcl')\n",
+    "                                    outfname = 'pentamerTest_' + str(numparticles) + 'particles', \n",
+    "                                    tclfname = '../../data/vmd/pentamerTest_' + \n",
+    "                                    str(numparticles) + 'particles_2vmd.tcl')\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
