--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -59,14 +59,16 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 12000\n",
+    "numTrajs = 100000\n",
     "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
+    "referenceState = 'tetrameric-loop' # 'trimeric-loop' or 'tetrameric-loop' or 'pentameric-loop' or 'pentamer'\n",
     "with open(filename1) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        fpts.append(time)\n",
+    "        if state == referenceState:\n",
+    "            time = float(time)\n",
+    "            fpts.append(time)\n",
     "\n",
     "# Normalize weights\n",
     "weights = np.ones_like(fpts)/float(len(fpts))"
@@ -86,21 +88,12 @@
     "with open(filename) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
+    "        #if state == referenceState:\n",
     "        time = float(time)\n",
     "        MSMRDfpts.append(time)\n",
     "            \n",
     "# Normalize weights\n",
     "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fpts = np.array(fpts)\n",
-    "fpts[fpts > 400]"
    ]
   },
   {
