Added visualization for multiparticle msmrd

--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -42,7 +42,9 @@
     "c2alt = 'royalblue'\n",
     "# Alpha transparency definition\n",
     "a1 = 0.2 #0.2\n",
-    "a2 = 0.7 #0.9 #0.7"
+    "a2 = 0.7 #0.9 #0.7\n",
+    "# referenceState = 'trimeric-loop' or 'tetrameric-loop' or 'pentameric-loop' (sometimes 'pentamer' for the last one)\n",
+    "referenceState = 'trimeric-loop' "
    ]
   },
   {
@@ -62,7 +64,7 @@
     "numTrajs = 100000\n",
     "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fpts = []\n",
-    "referenceState = 'tetrameric-loop' # 'trimeric-loop' or 'tetrameric-loop' or 'pentameric-loop' or 'pentamer'\n",
+    "\n",
     "with open(filename1) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
@@ -81,16 +83,16 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 18000 #24000 #18000\n",
+    "numTrajs = 24000 #24000 #18000\n",
     "filename = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "#filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "with open(filename) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
-    "        #if state == referenceState:\n",
-    "        time = float(time)\n",
-    "        MSMRDfpts.append(time)\n",
+    "        if state == referenceState:\n",
+    "            time = float(time)\n",
+    "            MSMRDfpts.append(time)\n",
     "            \n",
     "# Normalize weights\n",
     "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))"
@@ -178,6 +180,13 @@
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
