Possibly ready for final pentamer run

--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -73,7 +73,8 @@
     "            fpts.append(time)\n",
     "\n",
     "# Normalize weights\n",
-    "weights = np.ones_like(fpts)/float(len(fpts))"
+    "weights = np.ones_like(fpts)/float(len(fpts))\n",
+    "print('The number of trajectories ending in ' + referenceState + 's is:')"
    ]
   },
   {
