Refreshed patchyDimer notebook

--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -44,7 +44,7 @@
     "a1 = 0.2 #0.2\n",
     "a2 = 0.7 #0.9 #0.7\n",
     "# referenceState = 'trimeric-loop' or 'tetrameric-loop' or 'pentameric-loop' (sometimes 'pentamer' for the last one)\n",
-    "referenceState = 'trimeric-loop' "
+    "referenceState = 'pentameric-loop' "
    ]
   },
   {
@@ -71,10 +71,12 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            fpts.append(time)\n",
+    "            if len(fpts) >= 500:\n",
+    "                break\n",
     "\n",
     "# Normalize weights\n",
     "weights = np.ones_like(fpts)/float(len(fpts))\n",
-    "print('The number of trajectories ending in ' + referenceState + 's is:')"
+    "print('The number of trajectories ending in ' + referenceState + 's is: ', len(fpts))"
    ]
   },
   {
@@ -84,19 +86,24 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 24000 #24000 #18000\n",
-    "filename = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
+    "numTrajs = 25000 \n",
+    "filename = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) \\\n",
+    "                         + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '_final.xyz'\n",
     "#filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
+    "i=1\n",
     "with open(filename) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            MSMRDfpts.append(time)\n",
+    "            if len(MSMRDfpts) >= 500:\n",
+    "                break\n",
     "            \n",
     "# Normalize weights\n",
-    "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))"
+    "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))\n",
+    "print('The number of MSMRD trajectories ending in ' + referenceState + 's is: ', len(MSMRDfpts))"
    ]
   },
   {
@@ -144,7 +151,7 @@
    "source": [
     "# PLOT FOR PAPER #\n",
     "# Configure figure\n",
-    "fig, ax1 = plt.subplots(nrows=1, figsize=(6,5))\n",
+    "fig, ax1 = plt.subplots(nrows=1, figsize=(7,5))\n",
     "fig.subplots_adjust(hspace=0)\n",
     "fsize = 16\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
@@ -156,8 +163,8 @@
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
     "#hbins = range(0, 500,15)\n",
-    "hbins = range(0, 400,12)\n",
-    "#hbins = range(0, 200,6)\n",
+    "#hbins = range(0, 400,12)\n",
+    "hbins = range(0, 200,6)\n",
     "#hbins = range(0, 300,9)\n",
     "#hbins = range(0, 100,3)\n",
     "#hbins = range(0, 33,1)\n",
@@ -171,12 +178,14 @@
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(180, 0.095, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(200, 0.080, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
+    "ax1.text(100, 0.080, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(120, 0.070, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
     "#ax1.set_xlim([0,33])\n",
     "#ax1.set_ylim([0,0.18])\n",
-    "ax1.set_xlim([0,400])\n",
+    "#ax1.set_xlim([0,400])\n",
+    "ax1.set_xlim([0,200])\n",
+    "\n",
     "\n",
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
