--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -27,7 +27,7 @@
     "Drot = 1.0\n",
     "numTrajectories = 1000\n",
     "lagtime = 150\n",
-    "rootDirectory = '../../data/dimer/first_passage_times/'"
+    "rootDirectory = '../../data/patchyDimer/first_passage_times/'"
    ]
   },
   {
@@ -178,7 +178,9 @@
     "ax0.set_ylabel(r'$\\mathrm{FPTs \\ distribution}$', labelpad=17, fontsize=fsize + 4)\n",
     "ax0.set_xticks([0])\n",
     "ax0.set_yticks([0])\n",
-    "hbins = range(0, 500,15)\n",
+    "#hbins = range(0, 500,15)\n",
+    "hbins = range(0, 300,9)\n",
+    "\n",
     "\n",
     "# Plot A to unbound histogram\n",
     "ax1.hist(fptsA, bins = hbins, alpha=a1, color=c1, weights = weightsA );\n",
@@ -188,10 +190,10 @@
     "ax1.hist(MSMRDfptsA, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsAMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(75, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA, fptAstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(85, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA, MSMRDfptAstd), fontsize=fsize, color=c2)\n",
+    "ax1.text(55, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA, fptAstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(65, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA, MSMRDfptAstd), fontsize=fsize, color=c2)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "ax1.set_xlim([0,500])\n",
+    "ax1.set_xlim([0,300])\n",
     "ax1.set_ylim([0,0.18])\n",
     "\n",
     "# Plot B to unbound histogram\n",
@@ -202,10 +204,10 @@
     "ax2.hist(MSMRDfptsB, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
     "         facecolor='None', weights = weightsBMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax2.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow B$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(75, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB, fptBstd), fontsize=fsize, color=c1)\n",
-    "ax2.text(85, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB, MSMRDfptBstd), fontsize=fsize, color=c2)\n",
+    "ax2.text(55, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB, fptBstd), fontsize=fsize, color=c1)\n",
+    "ax2.text(65, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB, MSMRDfptBstd), fontsize=fsize, color=c2)\n",
     "ax2.set_yticks(np.arange(0, 0.18, step=0.1));\n",
-    "ax2.set_xlim([0,500])\n",
+    "ax2.set_xlim([0,300])\n",
     "ax2.set_ylim([0,0.18])\n",
     "\n",
     "#plt.savefig('toBound_FPTs.pdf', bbox_inches='tight')"
@@ -225,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 10000\n",
+    "numTrajs = 5000\n",
     "filenameA = rootDirectory + 'patchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "filenameB = rootDirectory + 'patchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA2unbound = []\n",
@@ -253,7 +255,7 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 10000\n",
+    "numTrajs = 5000\n",
     "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2unbound_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2unbound_trajs' + \\\n",
@@ -400,7 +402,7 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 10000\n",
+    "numTrajs = 5000\n",
     "filenameA = rootDirectory + 'patchyDimerFPTs_A2B_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "filenameB = rootDirectory + 'patchyDimerFPTs_B2A_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA2B = []\n",
@@ -428,7 +430,7 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 10000\n",
+    "numTrajs = 5000\n",
     "filenameA = rootDirectory + 'MSMRDpatchyDimerFPTs_A2B_trajs' + \\\n",
     "str(numTrajs) + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '.xyz'\n",
     "filenameB = rootDirectory + 'MSMRDpatchyDimerFPTs_B2A_trajs' + \\\n",
@@ -509,7 +511,7 @@
     "fsize = 16\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
-    "hbins = np.arange(0, 500, 15)\n",
+    "hbins = np.arange(0, 300, 9)\n",
     "\n",
     "# Set outer common axes titles\n",
     "ax0 = fig.add_subplot(111, frameon=False)\n",
@@ -526,11 +528,11 @@
     "ax1.hist(MSMRDfptsA2B, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
     "         facecolor='None', weights = weightsA2BMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax1.legend(fontsize=fsize, title=r'$A \\rightarrow B$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(60, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2B, fptA2Bstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(70, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2B, MSMRDfptA2Bstd), fontsize=fsize, color=c2)\n",
-    "ax1.set_xlim([0,500])\n",
-    "ax1.set_ylim([0,0.3])\n",
-    "ax1.set_yticks(np.arange(0, 0.2, step=0.1));\n",
+    "ax1.text(40, 0.23, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptA2B, fptA2Bstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(50, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptA2B, MSMRDfptA2Bstd), fontsize=fsize, color=c2)\n",
+    "ax1.set_xlim([0,300])\n",
+    "ax1.set_ylim([0,0.35])\n",
+    "ax1.set_yticks(np.arange(0, 0.4, step=0.2));\n",
     "\n",
     "# Plot B to A histogram\n",
     "ax2.hist(fptsB2A, bins = hbins, alpha=a1, color=c1, weights = weightsB2A);\n",
@@ -540,11 +542,11 @@
     "ax2.hist(MSMRDfptsB2A, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
     "         facecolor='None', weights = weightsB2AMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
     "ax2.legend(fontsize=fsize, title=r'$B \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax2.text(60, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2A, fptB2Astd), fontsize=fsize, color=c1)\n",
-    "ax2.text(70, 0.13, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2A, MSMRDfptB2Astd), fontsize=fsize, color=c2)\n",
-    "ax2.set_xlim([0,500])\n",
-    "ax2.set_ylim([0,0.3])\n",
-    "ax2.set_yticks(np.arange(0, 0.2, step=0.1));\n",
+    "ax2.text(40, 0.23, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfptB2A, fptB2Astd), fontsize=fsize, color=c1)\n",
+    "ax2.text(50, 0.18, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfptB2A, MSMRDfptB2Astd), fontsize=fsize, color=c2)\n",
+    "ax2.set_xlim([0,300])\n",
+    "ax2.set_ylim([0,0.35])\n",
+    "ax2.set_yticks(np.arange(0, 0.4, step=0.2));\n",
     "\n",
     "#plt.savefig('bound2bound_FPTs.pdf', bbox_inches='tight')"
    ]
@@ -564,7 +566,7 @@
    "source": [
     "# Load all data\n",
     "numTrajs = 5000\n",
-    "boxsizes = [6, 7, 8, 9, 10, 11, 12]\n",
+    "boxsizes = [6, 7, 8, 9, 10, 11, 12, 13]\n",
     "numBoxes = len(boxsizes)\n",
     "fpt = [[] for i in range(numBoxes)]\n",
     "MSMRDfpt = [[] for i in range(numBoxes)]\n",
@@ -630,7 +632,7 @@
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "ax = fig.add_subplot(111)\n",
     "linewidth = 2\n",
-    "concentrations = 1.0/pow(np.array(boxsizes),3)\n",
+    "concentrations = 1.0/pow(5*np.array(boxsizes),3)\n",
     "# Assuming moleculas have a diameter of 5nm, the actual boxsize is 5*boxisze nm,\n",
     "# lets convert to Molar concentration\n",
     "avogadro = 6.022E23\n",
@@ -638,13 +640,14 @@
     "concentrationsMolar = concentrations*oneLiter2nm/avogadro\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
+    "ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color='#ff5b00', \n",
     "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
+    "ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='#ff5b00', \n",
+    "                facecolor='#ff5b00')\n",
     "\n",
     "# Traditional error bar plots\n",
     "ax.errorbar(concentrationsMolar, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
+    "            elinewidth=2, linewidth=linewidth, capsize=5, color='#4169e1', label=r'$\\mathrm{MSM/RD}$')\n",
     "\n",
     "ax.set_yscale('log')\n",
     "#ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
@@ -653,7 +656,7 @@
     "ax.set_yticks([0.001,.01])\n",
     "#ax.set_ylim([0,0.12])\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "#plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
+    "plt.savefig('kon_dimer.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -677,19 +680,21 @@
     "errorKeqMSMRD = KeqMSMRD*(errorKonMSMRD/meanKonMSMRD + koffstdMSMRD/meanKoffMSMRD)\n",
     "\n",
     "# Plots with shaded regions as error bars\n",
-    "ax.plot(concentrationsMolar, Keq, marker='o', markersize=6, linewidth=linewidth , color=c1, \n",
+    "ax.plot(concentrationsMolar, Keq, marker='o', markersize=6, linewidth=linewidth , color='#ff5b00',\n",
     "        label=r'$\\mathrm{Benchmark}$')\n",
-    "ax.fill_between(concentrationsMolar, Keq-errorKeq, Keq+errorKeq, alpha=0.3, edgecolor=c1, facecolor=c1)\n",
+    "ax.fill_between(concentrationsMolar, Keq-errorKeq, Keq+errorKeq, alpha=0.3, edgecolor='#ff5b00', \n",
+    "                facecolor='#ff5b00')\n",
     "\n",
     "# Traditional error bar plots\n",
     "ax.errorbar(concentrationsMolar, KeqMSMRD, yerr=errorKeqMSMRD, marker='o', markersize=6, linestyle='--',\n",
-    "            elinewidth=2, linewidth=linewidth, capsize=5, color=c2, label=r'$\\mathrm{MSM/RD}$')\n",
+    "            elinewidth=2, linewidth=linewidth, capsize=5, color='#4169e1', label=r'$\\mathrm{MSM/RD}$')\n",
     "\n",
     "ax.set_yscale('log')\n",
+    "ax.set_yticks([0.001,.01])\n",
     "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($M$)', fontsize = fsize+4)\n",
     "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{eq}$)', fontsize = fsize+6)\n",
     "ax.legend(fontsize=fsize, title_fontsize = fsize, fancybox=True)\n",
-    "#plt.savefig('keq_dimer.pdf', bbox_inches='tight')"
+    "plt.savefig('keq_dimer.pdf', bbox_inches='tight')"
    ]
   },
   {
