--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -71,7 +71,7 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            fpts.append(time)\n",
-    "            if len(fpts) >= 500:\n",
+    "            if len(fpts) >= 5000:\n",
     "                break\n",
     "\n",
     "# Normalize weights\n",
@@ -98,7 +98,7 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            MSMRDfpts.append(time)\n",
-    "            if len(MSMRDfpts) >= 500:\n",
+    "            if len(MSMRDfpts) >= 5000:\n",
     "                break\n",
     "            \n",
     "# Normalize weights\n",
@@ -153,7 +153,7 @@
     "# Configure figure\n",
     "fig, ax1 = plt.subplots(nrows=1, figsize=(7,5))\n",
     "fig.subplots_adjust(hspace=0)\n",
-    "fsize = 16\n",
+    "fsize = 18\n",
     "plt.rcParams['xtick.labelsize']=fsize\n",
     "plt.rcParams['ytick.labelsize']=fsize\n",
     "# Set outer common axes titles\n",
@@ -171,24 +171,33 @@
     "\n",
     "\n",
     "# Plot A to unbound histogram\n",
+    "#legendTitle = r'Trimeric ring'\n",
+    "#legendTitle = r'Tetrameric ring'\n",
+    "legendTitle = r'Pentameric ring'\n",
+    "\n",
     "ax1.hist(fpts, bins = hbins, alpha=a1, color=c1, weights = weights );\n",
     "ax1.hist(fpts, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step', \n",
     "         facecolor = 'None', weights = weights, label =r'$\\mathrm{Benchmark}$');\n",
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a1, color=c2, weights = weightsMSMRD);\n",
     "ax1.hist(MSMRDfpts, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
     "         weights = weightsMSMRD, label =r'$\\mathrm{MSM/RD}$');\n",
-    "ax1.legend(fontsize=fsize, title=r'$\\mathrm{Unbound} \\rightarrow A$', title_fontsize = fsize, fancybox=True)\n",
-    "ax1.text(100, 0.080, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
-    "ax1.text(120, 0.070, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
+    "ax1.legend(fontsize=fsize, title=legendTitle, title_fontsize = fsize, fancybox=True)\n",
+    "#ax1.text(45, 0.125, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "#ax1.text(55, 0.11, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
+    "ax1.text(48, 0.11, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(mfpt, fptstd), fontsize=fsize, color=c1)\n",
+    "ax1.text(55, 0.10, r'$\\tau = {:.2f} \\pm {:.2f}$'.format(MSMRDmfpt, MSMRDfptstd), fontsize=fsize, color=c2alt)\n",
     "ax1.set_yticks(np.arange(0, 0.18, step=0.1));\n",
     "#ax1.set_xlim([0,33])\n",
     "#ax1.set_ylim([0,0.18])\n",
     "#ax1.set_xlim([0,400])\n",
     "ax1.set_xlim([0,200])\n",
     "\n",
-    "\n",
+    "#plt.savefig('trimerFPTs.pdf', bbox_inches='tight')\n",
+    "#plt.savefig('trimerFPTs.svg', bbox_inches='tight')\n",
+    "#plt.savefig('tetramerFPTs.pdf', bbox_inches='tight')\n",
+    "##plt.savefig('tetramerFPTs.svg', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
-    "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
+    "plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
    ]
   },
   {
