--- a/examples/benchmark/plotPentamerFPTs.ipynb
+++ b/examples/benchmark/plotPentamerFPTs.ipynb
@@ -61,8 +61,8 @@
    "outputs": [],
    "source": [
     "# Load benchmark FPT data computed by script\n",
-    "numTrajs = 100000\n",
-    "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "numTrajs = 200000\n",
+    "filename1 = rootDirectory + 'pentamerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '_concatenated.xyz'\n",
     "fpts = []\n",
     "\n",
     "with open(filename1) as file:\n",
@@ -71,7 +71,7 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            fpts.append(time)\n",
-    "            if len(fpts) >= 5000:\n",
+    "            if len(fpts) >= 2500:\n",
     "                break\n",
     "\n",
     "# Normalize weights\n",
@@ -86,10 +86,9 @@
    "outputs": [],
    "source": [
     "# Load FPT data obtained with MSMRD integrator\n",
-    "numTrajs = 25000 \n",
+    "numTrajs = 25000 #20000 #25000 \n",
     "filename = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) \\\n",
     "                         + '_lagt' + str(lagtime) +  '_boxsize' + str(boxsize) + '_final.xyz'\n",
-    "#filename = rootDirectory + 'trimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfpts = []\n",
     "i=1\n",
     "with open(filename) as file:\n",
@@ -98,8 +97,8 @@
     "        if state == referenceState:\n",
     "            time = float(time)\n",
     "            MSMRDfpts.append(time)\n",
-    "            if len(MSMRDfpts) >= 5000:\n",
-    "                break\n",
+    "            #if len(MSMRDfpts) >= 2500:\n",
+    "            #    break\n",
     "            \n",
     "# Normalize weights\n",
     "weightsMSMRD = np.ones_like(MSMRDfpts)/float(len(MSMRDfpts))\n",
@@ -197,7 +196,14 @@
     "#plt.savefig('tetramerFPTs.pdf', bbox_inches='tight')\n",
     "##plt.savefig('tetramerFPTs.svg', bbox_inches='tight')\n",
     "#plt.savefig('pentamerFPTs.pdf', bbox_inches='tight')\n",
-    "plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
+    "#plt.savefig('pentamerFPTs.svg', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Load FPTs for pentameric $k_\\text{on}$ plot"
    ]
   },
   {
@@ -205,7 +211,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load FPT data obtained with MSMRD integrator\n",
+    "numTrajs = 20000 #20000 #25000 \n",
+    "boxsizes = [6,7,8,9,10,11]\n",
+    "numBoxes = len(boxsizes)\n",
+    "fpt = [[] for i in range(numBoxes)]\n",
+    "MSMRDfpt = [[] for i in range(numBoxes)]\n",
+    "for i, boxlen in enumerate(boxsizes):\n",
+    "    #filename1 = rootDirectory + '/patchyDimerFPTs_2bound_trajs' + \\\n",
+    "    #    str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "    filename2 = rootDirectory + 'MSMRDpentamerFPTs_trajs' + str(numTrajs) \\\n",
+    "                         + '_lagt' + str(lagtime) +  '_boxsize' + str(boxlen) + '.xyz'\n",
+    "    #with open(filename1) as file:\n",
+    "    #    for line in file:\n",
+    "    #        state, time = line.split(\" \")\n",
+    "    #        fpt[i].append(float(time))\n",
+    "    with open(filename2) as file:\n",
+    "        for line in file:\n",
+    "            state, time = line.split(\" \")\n",
+    "            MSMRDfpt[i].append(float(time))\n",
+    "            if len(MSMRDfpt[i]) >= 1000:\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate meand and bootstrapping error\n",
+    "numBootsrapSamples = 500\n",
+    "numValues = 250\n",
+    "meanKon = np.zeros(numBoxes)\n",
+    "meanKonMSMRD = np.zeros(numBoxes)\n",
+    "stdDevKon = np.zeros(numBoxes)\n",
+    "stdDevKonMSMRD = np.zeros(numBoxes)\n",
+    "errorKon = np.zeros(numBoxes)\n",
+    "errorKonMSMRD = np.zeros(numBoxes)\n",
+    "for i, boxlen in enumerate(boxsizes):\n",
+    "    # Calculate bootstrapping samples of mean first passage times\n",
+    "    #mfpt, fptStdDev = analysisTools.bootstrapping(fpt[i], numBootsrapSamples, numValues)\n",
+    "    MSMRDmfpt, MSMRDfptStdDev = analysisTools.bootstrapping(MSMRDfpt[i], numBootsrapSamples, numValues)\n",
+    "    # Calculate on rate corresponding to bootstrapping samples\n",
+    "    #meanKon[i], stdDevKon[i] = 1.0/mfpt, fptStdDev/(mfpt*mfpt)\n",
+    "    meanKonMSMRD[i], stdDevKonMSMRD[i] = 1.0/MSMRDmfpt, MSMRDfptStdDev/(MSMRDmfpt*MSMRDmfpt)\n",
+    "    # Percentual errors\n",
+    "    #errorKon[i] = stdDevKon[i] #1.96*stdDevKon[i]/numBootsrapSamples\n",
+    "    errorKonMSMRD[i] = stdDevKonMSMRD[i] #1.96*stdDevKonMSMRD[i]/numBootsrapSamples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot on rates vs concentration:\n",
+    "fig = plt.figure()\n",
+    "fsize = 16\n",
+    "plt.rcParams['xtick.labelsize']=fsize\n",
+    "plt.rcParams['ytick.labelsize']=fsize\n",
+    "ax = fig.add_subplot(111)\n",
+    "linewidth = 2\n",
+    "concentrations = 1.0/pow(5*np.array(boxsizes),3)\n",
+    "# Assuming moleculas have a diameter of 5nm, the actual boxsize is 5*boxisze nm,\n",
+    "# lets convert to Molar concentration\n",
+    "avogadro = 6.022E23\n",
+    "oneLiter2nm = 1.0E24\n",
+    "concentrationsMolar = concentrations*oneLiter2nm/avogadro\n",
+    "\n",
+    "# Plots with shaded regions as error bars\n",
+    "#ax.plot(concentrationsMolar, meanKon, marker='o', markersize=6, linewidth=linewidth , color='#ff5b00', \n",
+    "#        label=r'$\\mathrm{Benchmark}$')\n",
+    "#ax.fill_between(concentrationsMolar, meanKon-errorKon, meanKon+errorKon, alpha=0.3, edgecolor='#ff5b00', \n",
+    "#                facecolor='#ff5b00')\n",
+    "\n",
+    "# Traditional error bar plots\n",
+    "ax.errorbar(concentrationsMolar, meanKonMSMRD, yerr=errorKonMSMRD, marker='o', markersize=6, linestyle='--',\n",
+    "            elinewidth=2, linewidth=linewidth, capsize=5, color='#4169e1', label=r'$\\mathrm{MSM/RD}$')\n",
+    "\n",
+    "ax.set_yscale('log')\n",
+    "#ax.set_xlabel(r'$\\mathrm{Concentration}$ ($1/\\mathrm{Volume}$)', fontsize = fsize+4)\n",
+    "ax.set_xlabel(r'$\\mathrm{Concentration}$ ($M$)', fontsize = fsize+4)\n",
+    "ax.set_ylabel(r'$\\mathrm{log}(k_\\mathrm{on}$)', fontsize = fsize+6)\n",
+    "#ax.set_yticks([0.001,.01])\n",
+    "#ax.set_ylim([0,0.12])"
+   ]
   },
   {
    "cell_type": "code",
